--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ commands =
     zope-testrunner --test-path=src []
 deps =
     .[test]
+    -rrequirements.txt
 
 [testenv:coverage]
 usedevelop = true
@@ -24,3 +25,4 @@ commands =
     sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html
 deps =
     .[docs]
+    -rrequirements.txt
