--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,3 +15,5 @@ recursive-include docs *.py
 recursive-include docs *.rst
 recursive-include docs Makefile
 recursive-include src *.zcml
+recursive-include src *.json
+recursive-include src *.png
